// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering when not submitting should ensure layout structure 1`] = `
<CollapsiblePanel
  label={
    <FormattedMessage
      defaultMessage="Personal Settings"
      description="Title of the User Profile personal settings panel"
      id="UserProfile.PersonalSettingsPanel.title"
      values={Object {}}
    />
  }
>
  <FormBox
    hasWarning={false}
  >
    <LabelField
      isRequired={true}
      title={
        <FormattedMessage
          defaultMessage="Language"
          description="Language label"
          id="UserProfile.PersonalSettingsPanel.language"
          values={Object {}}
        />
      }
    />
    <Stack
      alignItems="stretch"
      scale="s"
    >
      <Select
        addLabelText="Add \\"{label}\\"?"
        arrowRenderer={[Function]}
        autosize={true}
        backspaceRemoves={true}
        backspaceToRemoveMessage="Press backspace to remove {label}"
        clearAllText="Clear all"
        clearRenderer={[Function]}
        clearValueText="Clear value"
        clearable={false}
        deleteRemoves={true}
        delimiter=","
        disabled={false}
        escapeClearsValue={true}
        filterOptions={[Function]}
        ignoreAccents={true}
        ignoreCase={true}
        inputProps={Object {}}
        isLoading={false}
        joinValues={false}
        labelKey="label"
        matchPos="any"
        matchProp="any"
        menuBuffer={0}
        menuRenderer={[Function]}
        multi={false}
        name="language"
        noResultsText="No results found"
        onBlur={[Function]}
        onBlurResetsInput={true}
        onChange={[Function]}
        onCloseResetsInput={true}
        optionComponent={[Function]}
        options={
          Array [
            Object {
              "label": "English (en)",
              "value": "en",
            },
            Object {
              "label": "German (de)",
              "value": "de",
            },
          ]
        }
        pageSize={5}
        parse={[Function]}
        placeholder="Select..."
        required={false}
        scrollMenuIntoView={true}
        searchable={false}
        simpleValue={false}
        tabSelectsValue={true}
        value="en"
        valueComponent={[Function]}
        valueKey="value"
      />
      <ValidationErrorSwitch
        errors={Object {}}
        isTouched={false}
      >
        <ValidationErrorMatch
          rule="required"
        >
          <ErrorMessage>
            <FormattedMessage
              defaultMessage="Please fill in this required field."
              description="An error message to show if the field is required"
              id="Validation.required"
              values={Object {}}
            />
          </ErrorMessage>
        </ValidationErrorMatch>
      </ValidationErrorSwitch>
    </Stack>
  </FormBox>
  <FormBox
    hasWarning={false}
  >
    <LabelField
      isRequired={false}
      title={
        <FormattedMessage
          defaultMessage="Time Zone"
          description="TimeZone label"
          id="UserProfile.PersonalSettingsPanel.timeZone"
          values={Object {}}
        />
      }
    />
    <Select
      addLabelText="Add \\"{label}\\"?"
      arrowRenderer={[Function]}
      autosize={true}
      backspaceRemoves={true}
      backspaceToRemoveMessage="Press backspace to remove {label}"
      clearAllText="Clear all"
      clearRenderer={[Function]}
      clearValueText="Clear value"
      clearable={true}
      deleteRemoves={true}
      delimiter=","
      disabled={false}
      escapeClearsValue={true}
      filterOptions={[Function]}
      ignoreAccents={true}
      ignoreCase={true}
      inputProps={Object {}}
      isLoading={false}
      joinValues={false}
      labelKey="label"
      matchPos="any"
      matchProp="any"
      menuBuffer={0}
      menuRenderer={[Function]}
      multi={false}
      name="timeZone"
      noResultsText="No results found"
      onBlur={[Function]}
      onBlurResetsInput={true}
      onChange={[Function]}
      onCloseResetsInput={true}
      optionComponent={[Function]}
      options={
        Array [
          Object {
            "label": "Europe/Berlin - CEST (+02:00)",
            "value": "Europe/Berlin",
          },
        ]
      }
      pageSize={5}
      parse={[Function]}
      placeholder="Select..."
      required={false}
      scrollMenuIntoView={true}
      searchable={true}
      simpleValue={false}
      tabSelectsValue={true}
      value="Europe/Berlin"
      valueComponent={[Function]}
      valueKey="value"
    />
  </FormBox>
</CollapsiblePanel>
`;

exports[`rendering when submitting should disable all input fields 1`] = `
<CollapsiblePanel
  label={
    <FormattedMessage
      defaultMessage="Personal Settings"
      description="Title of the User Profile personal settings panel"
      id="UserProfile.PersonalSettingsPanel.title"
      values={Object {}}
    />
  }
>
  <FormBox
    hasWarning={false}
  >
    <LabelField
      isRequired={true}
      title={
        <FormattedMessage
          defaultMessage="Language"
          description="Language label"
          id="UserProfile.PersonalSettingsPanel.language"
          values={Object {}}
        />
      }
    />
    <Stack
      alignItems="stretch"
      scale="s"
    >
      <Select
        addLabelText="Add \\"{label}\\"?"
        arrowRenderer={[Function]}
        autosize={true}
        backspaceRemoves={true}
        backspaceToRemoveMessage="Press backspace to remove {label}"
        clearAllText="Clear all"
        clearRenderer={[Function]}
        clearValueText="Clear value"
        clearable={false}
        deleteRemoves={true}
        delimiter=","
        disabled={true}
        escapeClearsValue={true}
        filterOptions={[Function]}
        ignoreAccents={true}
        ignoreCase={true}
        inputProps={Object {}}
        isLoading={false}
        joinValues={false}
        labelKey="label"
        matchPos="any"
        matchProp="any"
        menuBuffer={0}
        menuRenderer={[Function]}
        multi={false}
        name="language"
        noResultsText="No results found"
        onBlur={[Function]}
        onBlurResetsInput={true}
        onChange={[Function]}
        onCloseResetsInput={true}
        optionComponent={[Function]}
        options={
          Array [
            Object {
              "label": "English (en)",
              "value": "en",
            },
            Object {
              "label": "German (de)",
              "value": "de",
            },
          ]
        }
        pageSize={5}
        parse={[Function]}
        placeholder="Select..."
        required={false}
        scrollMenuIntoView={true}
        searchable={false}
        simpleValue={false}
        tabSelectsValue={true}
        value="en"
        valueComponent={[Function]}
        valueKey="value"
      />
      <ValidationErrorSwitch
        errors={Object {}}
        isTouched={false}
      >
        <ValidationErrorMatch
          rule="required"
        >
          <ErrorMessage>
            <FormattedMessage
              defaultMessage="Please fill in this required field."
              description="An error message to show if the field is required"
              id="Validation.required"
              values={Object {}}
            />
          </ErrorMessage>
        </ValidationErrorMatch>
      </ValidationErrorSwitch>
    </Stack>
  </FormBox>
  <FormBox
    hasWarning={false}
  >
    <LabelField
      isRequired={false}
      title={
        <FormattedMessage
          defaultMessage="Time Zone"
          description="TimeZone label"
          id="UserProfile.PersonalSettingsPanel.timeZone"
          values={Object {}}
        />
      }
    />
    <Select
      addLabelText="Add \\"{label}\\"?"
      arrowRenderer={[Function]}
      autosize={true}
      backspaceRemoves={true}
      backspaceToRemoveMessage="Press backspace to remove {label}"
      clearAllText="Clear all"
      clearRenderer={[Function]}
      clearValueText="Clear value"
      clearable={true}
      deleteRemoves={true}
      delimiter=","
      disabled={true}
      escapeClearsValue={true}
      filterOptions={[Function]}
      ignoreAccents={true}
      ignoreCase={true}
      inputProps={Object {}}
      isLoading={false}
      joinValues={false}
      labelKey="label"
      matchPos="any"
      matchProp="any"
      menuBuffer={0}
      menuRenderer={[Function]}
      multi={false}
      name="timeZone"
      noResultsText="No results found"
      onBlur={[Function]}
      onBlurResetsInput={true}
      onChange={[Function]}
      onCloseResetsInput={true}
      optionComponent={[Function]}
      options={
        Array [
          Object {
            "label": "Europe/Berlin - CEST (+02:00)",
            "value": "Europe/Berlin",
          },
        ]
      }
      pageSize={5}
      parse={[Function]}
      placeholder="Select..."
      required={false}
      scrollMenuIntoView={true}
      searchable={true}
      simpleValue={false}
      tabSelectsValue={true}
      value="Europe/Berlin"
      valueComponent={[Function]}
      valueKey="value"
    />
  </FormBox>
</CollapsiblePanel>
`;
